force-app/main/default/objects/Case/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field means whether the Case Status Done approved by the Manager or not</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>