force-app/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of the Case/Task/Subtask</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>