force-app/main/default/objects/Case/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Story</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>