force-app/main/default/objects/Case/recordTypes/Bug_Reports.recordType-meta.xml
<RecordType>
    <fullName>Bug_Reports</fullName>
    <active>true</active>
    <businessProcess>CaseTestSupportProcess</businessProcess>
    <label>Bug Reports</label>
</RecordType>