force-app/main/default/objects/Case/recordTypes/DevelopmentTasks.recordType-meta.xml
<RecordType>
    <fullName>DevelopmentTasks</fullName>
    <active>true</active>
    <businessProcess>CaseTestSupportProcess</businessProcess>
    <label>Development Tasks</label>
</RecordType>