force-app/main/default/objects/Case/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>true</active>
    <businessProcess>CaseTestSupportProcess</businessProcess>
    <label>Hardware</label>
</RecordType>