force-app/main/default/objects/Case/recordTypes/Software.recordType-meta.xml
<RecordType>
    <fullName>Software</fullName>
    <active>true</active>
    <businessProcess>CaseTestSupportProcess</businessProcess>
    <label>Software</label>
</RecordType>