force-app/main/default/objects/Case/recordTypes/SupportRequests.recordType-meta.xml
<RecordType>
    <fullName>SupportRequests</fullName>
    <active>true</active>
    <businessProcess>CaseTestSupportProcess</businessProcess>
    <label>Support Requests</label>
</RecordType>